# haproxy-telemetry

./: .gitignore  Cargo.toml  README.adoc
.github/workflows/: rust.yml
devenv/: .env  docker-compose.yml
devenv/conf/: haproxy.conf  spoe.cfg
devenv/server/: Dockerfile  README.adoc  package.json  server.js  tracer.js
src/: connection.rs  frame.rs  lib.rs  main.rs  otel.rs  proplists.rs
tests/: frame_tests.rs
