[package]
name = "haproxy-spoa-rust"
version = "0.1.0"
authors = ["arnauld"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1.18.1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3.0"
num_enum = "0.5.7"
