[package]
name = "haproxy-spoa-rust"
version = "0.1.0"
authors = ["arnauld"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
pretty_env_logger = "0.4.0"
bytes = "1"
tokio = { version = "1.18.1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3.0"
num_enum = "0.5.7"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"
opentelemetry-semantic-conventions = "0.9.0"
